--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>제 8회 선린톤</title>
 
-	<link rel='icon' type='image/png' href='./favicon.png'>
+	<link rel='icon' type='image/png' href='./logo.ico'>
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 
